<resources>
    <string name="app_name">CustomerCenter</string>
    <string name="reset">重置</string>
    <string name="sure">确认</string>
    <string name="more_result_numSelected">选中%s项</string>
    <string name="more">更多</string>
    <string name="customer_follow">客源跟进</string>
    <string name="new_insert">新增</string>
    <string name="rewarks">备注</string>
    <string name="rewarks_input">请输入 备注</string>
    <string name="follow_content">跟进内容</string>
    <string name="follow_content_input">请输入 跟进内容</string>
    <string name="log">日志</string>
    <string name="telLog">电话日志</string>
    <string name="more_update">修改</string>
    <string name="more_update_status">改状态</string>
    <string name="new_insert_tel">新增电话</string>
    <string name="set_top">置顶</string>
    <string name="noset_top">取消置顶</string>
    <string name="customer_info">客户档案</string>
    <string name="more_edit_info">编辑信息</string>
    <string name="customerName">客户姓名</string>
    <string name="customerName_input">请输入 客户姓名</string>
    <string name="userType">客户类型</string>
    <string name="userType_input">请选择 客户类型</string>
    <string name="source">客户来源</string>
    <string name="source_input">请输入 客户来源</string>
    <string name="demandFloor">需求楼层</string>
    <string name="demandFloor_input">请输入 需求楼层</string>
    <string name="demandHouseType">需求户型</string>
    <string name="demandHouseType_input">请输入 需求户型</string>
    <string name="demandArea">需求面积</string>
    <string name="demandArea_input">请输入 需求面积</string>
    <string name="demandBeat">需求区域</string>
    <string name="demandBeat_input">请输入 需求区域</string>
    <string name="isSubstitution">是否置换</string>
    <string name="isSubstitution_input">请输入 是否置换</string>
    <string name="demandBudget">需求预算</string>
    <string name="demandBudget_input">请输入 需求预算</string>
    <string name="viewHouseDate">看房时间</string>
    <string name="viewHouseDate_input">请输入 看房时间</string>
    <string name="isFirstHouse">是否首套购房</string>
    <string name="isFirstHouse_input">请输入 是否首套购房</string>
    <string name="successDate">预判成交期</string>
    <string name="successDate_input">请输入 预判成交期</string>
    <string name="isStyle">个性需求</string>
    <string name="isStyle_input">请输入 个性需求</string>

    <string name="effective">有效</string>
    <string name="bargain">成交</string>
    <string name="defer">暂缓</string>
    <string name="delete">删除</string>
    <string name="input_phone_tip">请输入有效的电话号码</string>
    <string name="finish">完成</string>
    <string name="customerInfo">客户信息</string>
    <string name="OwnerNick">业主姓名</string>
    <string name="add_customer">新增客源</string>
    <string name="mobile">联系方式</string>
    <string name="mobile_input">请输入 联系方式</string>
    <string name="ownership">客户所属</string>
    <string name="ownership_input">请选择 客户所属</string>
    <string name="customerCode">客户编号</string>
    <string name="customerCode_input">请输入 客户编号</string>
    <string name="customerTel">客户电话</string>
    <string name="customerTel_input">请输入 客户电话</string>
    <string name="more_new_phone">新建电话</string>
</resources>
