<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/setCustomerInfoTitleBar"
        style="@style/MatchWrap"
        android:background="@color/main_color"
        app:isShowBack="true"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/setCustomerInfoLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvCustomerName"
                style="@style/MatchWrap"
                app:leftTitleText="@string/customerName"
                app:isNecessary="true"
                app:isShowLine="true"
                app:tipContentText="@string/customerName_input"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nsvUserType"
                style="@style/MatchWrap"
                app:leftTitleText="@string/userType"
                app:isNecessary="true"
                app:isShowLine="true"
                app:tipContentText="@string/userType_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvSource"
                style="@style/MatchWrap"
                app:leftTitleText="@string/source"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/source_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandFloor"
                style="@style/MatchWrap"
                app:leftTitleText="@string/demandFloor"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/demandFloor_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandHouseType"
                style="@style/MatchWrap"
                app:leftTitleText="@string/demandHouseType"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/demandHouseType_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandArea"
                style="@style/MatchWrap"
                app:leftTitleText="@string/demandArea"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/demandArea_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandBeat"
                style="@style/MatchWrap"
                app:leftTitleText="@string/demandBeat"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/demandBeat_input"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvIsSubstitution"
                style="@style/MatchWrap"
                app:leftTitleText="@string/isSubstitution"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/isSubstitution_input"
                android:layout_height="@dimen/dp_40"/>
            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandBudget"
                style="@style/MatchWrap"
                app:leftTitleText="@string/demandBudget"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/demandBudget_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvViewHouseDate"
                style="@style/MatchWrap"
                app:leftTitleText="@string/viewHouseDate"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/viewHouseDate_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvIsFirstHouse"
                style="@style/MatchWrap"
                app:leftTitleText="@string/isFirstHouse"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/isFirstHouse_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvSuccessDate"
                style="@style/MatchWrap"
                app:leftTitleText="@string/successDate"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/successDate_input"
                android:layout_height="@dimen/dp_40"/>

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvIsStyle"
                style="@style/MatchWrap"
                app:leftTitleText="@string/isStyle"
                app:isNecessary="false"
                app:isShowLine="true"
                app:tipContentText="@string/isStyle_input"
                android:layout_height="@dimen/dp_40"/>

            <TextView
                android:layout_marginLeft="@dimen/dp_15"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/color_333333"
                android:text="@string/rewarks"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
            <EditText
                android:id="@+id/etEditCustomerInfoRewarks"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:padding="@dimen/dp_10"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_14"
                android:text="@string/rewarks_input"
                android:gravity="left|top"
                android:background="@drawable/common_line_radius_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"/>
            <TextView
                android:id="@+id/tvEditCustomerInfoUpdate"
                android:layout_marginTop="@dimen/dp_34"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24"
                android:gravity="center"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/white"
                android:text="@string/more_update"
                android:layout_marginBottom="@dimen/dp_24"
                android:background="@drawable/common_maincolor_radius_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>