<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/setCustomerInfoTitleBar"
        style="@style/MatchWrap"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:titleText="@string/add_customer" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llAddCustomer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nsvCustomerType"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/userType"
                app:tipContentText="@string/userType_input" />

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvCustomerName"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/customerName"
                app:tipContentText="@string/customerName_input" />

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvMobile"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:inputType="phone"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/mobile"
                app:tipContentText="@string/mobile_input" />

            <com.kotlin.base.widgets.NecessaryTitleSelectView
                android:id="@+id/nsvUserType"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/ownership"
                app:tipContentText="@string/ownership_input" />

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandBeat"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/demandBeat"
                app:tipContentText="@string/demandBeat_input" />

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandBudget"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/demandBudget"
                app:tipContentText="@string/demandBudget_input" />

            <com.kotlin.base.widgets.NecessaryTitleInputView
                android:id="@+id/nsvDemandFloor"
                style="@style/MatchWrap"
                android:layout_height="@dimen/dp_40"
                app:isNecessary="true"
                app:isShowLine="true"
                app:leftTitleText="@string/demandFloor"
                app:tipContentText="@string/demandFloor_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_15"
                android:gravity="center_vertical"
                android:text="@string/rewarks"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_15" />

            <EditText
                android:id="@+id/etRewarks"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/common_line_radius_bg"
                android:gravity="top|left"
                android:hint="@string/rewarks_input"
                android:padding="@dimen/dp_10"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tvAddCustomer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_34"
                android:layout_marginRight="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:background="@drawable/common_maincolor_radius_bg"
                android:gravity="center"
                android:text="@string/new_insert"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>